// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileFieldWrapper renders disabled file input 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={true}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </n>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </n>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with error message 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
    <span>
       
      <Error
        error="Oh no!"
        wrapper="span"
      />
    </span>
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </n>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with help message 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </n>
  </div>
  <div
    className="Help"
  >
    Ask Google!
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with multiple allowed file types 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
  </Label>
  <div
    className="InputWrapper"
  >
    <t
      accept={
        Array [
          ".txt,.csv",
        ]
      }
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disablePreview={true}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span>
        test.txt
      </span>
    </t>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with no specified type 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept=""
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </n>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders file input with selected filename 1`] = `
<fieldset
  className="Field"
>
  <Label>
    Test File Input
     *
  </Label>
  <div
    className="InputWrapper"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span>
        test.csv
      </span>
    </n>
  </div>
</fieldset>
`;

exports[`FileFieldWrapper renders with a hidden label 1`] = `
<fieldset
  className="Field"
>
  <Label />
  <div
    className="InputWrapper"
  >
    <n
      accept=".csv"
      activeClassName="DropzoneActive"
      className="Dropzone"
      disableClick={false}
      disabled={false}
      disabledClassName="DropzoneDisabled"
      getDataTransferItems={[Function]}
      inputProps={Object {}}
      maxSize={Infinity}
      minSize={0}
      multiple={false}
      onDrop={[Function]}
      onFileDialogCancel={[Function]}
      preventDropOnDocument={true}
      style={Object {}}
    >
      <span
        className="Placeholder"
      >
        <FileUpload />
        <span>
          Drag a file here, or click to browse
        </span>
      </span>
    </n>
  </div>
</fieldset>
`;
